Mon Mar 15 12:53:26 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/common.txt:

          Corrected the documentation for the 'type_is_static' template
          variable.

        * mpc.pl:
        * mwc.pl:

          Brought over Adam Mitz's change to deal with an undefined
          $FindBin::RealBin.

Tue Mar  9 11:23:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl.

        * config/ndds_ts_defaults.mpb:
          Added no_strict_aliasing=1

        * config/nddslib.mpb:
          Wen compiling for 64bit, add RTI_64BIT as define. When compiling
          for linux, add RTI_LINUX as define

Mon Mar  1 18:33:04 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where if the user associated an attribute to a
          dependency, the dependency would be removed.  If no attribute was
          associated, then the dependency was not adversely affected.

Sun Feb 28 15:50:03 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * templates/make.mpd:

          Added $(CFLAGS) to the $(COMPILE.c) variable.

Sun Feb 28 15:08:56 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * docs/html/MakeProjectCreator.html:
        * modules/ProjectCreator.pm:
        * modules/VC8WorkspaceCreator.pm:

          Added an extended syntax for associating name-value pairs with
          project dependencies (i.e., values added to the 'after' keyword).
          See the documentation for more details.

Tue Feb 23 15:08:32 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * config/wireshark.mpb:

          Switched from using windows project types to the windows property.

        * devtools/document_template.pl:

          Account for arrow operator usage.

        * modules/MakeProjectBase.pm:
        * modules/ProjectCreator.pm:
        * templates/make.mpd:

          Added a very limited ability to modify builtin component types