@@ -1,3 +1,12 @@
+Mon Mar 15 19:50:23 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * modules/WorkspaceCreator.pm:
+
+          Fixed a bug, reported by Johnny Willemsen, where aggregated
+          workspaces that were referenced by environment variables ended up
+          with the wrong relative paths (only occured with multiple levels of
+          aggregation).
+
 Mon Mar 15 12:53:26 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>
 
         * docs/templates/common.txt:
